--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/express": "^5.0.3",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "express-swagger-generator": "^1.1.17",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "swagger": "^0.7.5",
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
