--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "swagger": "^0.7.5",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.27"
   },
   "devDependencies": {
