--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: "3"
 
 services:
   main:
@@ -6,5 +5,29 @@ services:
     build:
       context: .
     env_file:
-      -
+      - .dev.env
+    volumes:
+      - .:/app
+      - /app/node_modules
+    ports:
+      - "5000:5000"
+    command: npm run start:dev
+    depends_on:
+      - postgres
+    restart: always
   postgres:
+    container_name: postgres
+    image: postgres
+    env_file:
+      - .dev.env
+    environment:
+      PG_DATA: /vat/lib/postgresql/data
+      POSTGRES_PASSWORD: root
+    ports:
+      - 5432:5432
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+    restart: always
+
+volumes:
+  pgdata:
