--- a/.dev.env
+++ b/.dev.env
@@ -1,6 +1,6 @@
 PORT=5000
-DB_USERNAME=postgres
-DB_PASSWORD=root
-DB_DATABASE=booking
-DB_HOST=postgres
-DB_PORT=5432
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=root
+POSTGRES_DB=booking
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
