--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   main:
     container_name: main
@@ -10,24 +9,31 @@ services:
       - .:/app
       - /app/node_modules
     ports:
-      - "5000:5000"
+      - 5000:5000
     command: npm run start:dev
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     restart: always
   postgres:
     container_name: postgres
-    image: postgres
+    image: postgres:18
     env_file:
       - .dev.env
     environment:
-      PG_DATA: /vat/lib/postgresql/data
-      POSTGRES_PASSWORD: root
+      PG_DATA: /var/lib/postgresql/data
     ports:
       - 5432:5432
     volumes:
+      - ../2. Init Database:/docker-entrypoint-initdb.d
       - pgdata:/var/lib/postgresql/data
+    healthcheck: # Блядь, проверка готовности сервиса
+      test: [ "CMD-SHELL", "pg_isready -U postgres" ]
+      interval: 5s
+      timeout: 5s
+      retries: 5
     restart: always
+
 
 volumes:
   pgdata:
