--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "express-swagger-generator": "^1.1.17",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
+    "pino": "^10.1.0",
+    "pino-http": "^11.0.0",
+    "pino-pretty": "^13.1.3",
     "swagger": "^0.7.5",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.6.2",
+    "jest": "^30.2.0",
     "typescript": "^5.5.3"
   },
   "private": true
